--- a/demo/src/main/res_scroll_drag/layout/activity_scroll_drag_main.xml
+++ b/demo/src/main/res_scroll_drag/layout/activity_scroll_drag_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".scroll_drag.ScrollDragMainActivity">
 
     <ScrollView
         android:layout_width="0dp"
@@ -33,8 +33,8 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Other"
-                android:onClick="Other"
+                android:text="View_Drag_Helper"
+                android:onClick="View_Drag_Helper"
                 android:orientation="vertical"/>
         </LinearLayout>
     </ScrollView>
