--- a/demo/src/main/res_scroll_drag/layout/activity_view_drag_helper.xml
+++ b/demo/src/main/res_scroll_drag/layout/activity_view_drag_helper.xml
@@ -16,7 +16,7 @@
             android:text="open"/>
     </RelativeLayout>
 
-    <LinearLayout
+    <com.leo.demo.scroll_drag.ViewDragHelperContainerLayout
         android:id="@+id/ll_menu"
         android:layout_width="300dp"
         android:layout_height="match_parent"
@@ -28,5 +28,5 @@
             android:layout_gravity="center"
             android:onClick="close"
             android:text="close"/>
-    </LinearLayout>
+    </com.leo.demo.scroll_drag.ViewDragHelperContainerLayout>
 </com.leo.demo.scroll_drag.ViewDragHelperLayout>
