--- a/demo/src/main/res/values-v21/styles.xml
+++ b/demo/src/main/res/values-v21/styles.xml
@@ -14,6 +14,15 @@
         <!--  控制各个控件被选中时的颜色 a secondary color for controls like checkboxes and text fields -->
         <item name="colorAccent">@color/colorAccent</item>
 
+        <item name="android:windowFullscreen">true</item>
+        <!--透明状态栏-->
+        <!--<item name="android:windowTranslucentStatus">true</item>-->
+        <!--透明导航栏-->
+        <!--<item name="android:windowTranslucentNavigation">true</item>-->
+        <!--使状态栏，导航栏可绘制-->
+        <!--<item name="android:windowDrawsSystemBarBackgrounds">true</item>-->
+
+        <!--<item name="android:navigationBarColor">#A0000000</item>-->
         <!--底部导航栏颜色-->
         <!--<item name="android:navigationBarColor">@color/navigationColor</item>-->
 
